<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/home_nav_graph"
        android:icon="@drawable/ic_nav_home"
        android:title="@string/nav_home" />
    <item
        android:id="@+id/product_nav_graph"
        android:icon="@drawable/ic_nav_products"
        android:title="@string/nav_products" />
    <item
        android:id="@+id/spa_nav_graph"
        android:icon="@drawable/ic_nav_spa"
        android:title="@string/nav_spa" />
    <item
        android:id="@+id/cart_nav_graph"
        android:icon="@drawable/ic_nav_cart"
        android:title="@string/nav_cart" />
    <item
        android:id="@+id/account_nav_graph"
        android:icon="@drawable/ic_nav_account"
        android:title="@string/nav_account" />
</menu>
